--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,21 +66,12 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('original_image.png', result)    # mention the path you want to save the result\n",
-    "\n",
-    "'''\n",
-    "plt.axis('off')\n",
-    "plt.title(\"Original\")\n",
-    "plt.imshow(img2, cmap='gray')\n",
-    "if save:\n",
-    "    plt.savefig(\"original_image.png\")\n",
-    "plt.show()\n",
-    "'''"
+    "    cv2.imwrite('original_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,21 +144,12 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('sharpened_image.png', result)    # mention the path you want to save the result\n",
-    "\n",
-    "'''\n",
-    "plt.axis('off')\n",
-    "plt.title(\"Sharpening\")\n",
-    "plt.imshow(sharpened_image, cmap='gray')\n",
-    "if save:\n",
-    "    plt.savefig(\"sharpened_image.png\")\n",
-    "plt.show()\n",
-    "'''"
+    "    cv2.imwrite('sharpened_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,21 +160,12 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('laplacian_image.png', result)    # mention the path you want to save the result\n",
-    "\n",
-    "'''\n",
-    "plt.axis('off')\n",
-    "plt.title(\"Laplacian\")\n",
-    "plt.imshow(laplacian_image, cmap='gray')\n",
-    "if save:\n",
-    "    plt.savefig(\"laplacian_image.png\")\n",
-    "plt.show()\n",
-    "'''"
+    "    cv2.imwrite('laplacian_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,21 +176,12 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('same_image.png', result)    # mention the path you want to save the result\n",
-    "\n",
-    "'''\n",
-    "plt.axis('off')\n",
-    "plt.title(\"same\")\n",
-    "plt.imshow(same, cmap='gray')\n",
-    "if save:\n",
-    "    plt.savefig(\"same_image.png\")\n",
-    "plt.show()\n",
-    "'''"
+    "    cv2.imwrite('same_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +195,106 @@
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
     "    cv2.imwrite('unsharp_image.png', result)    # mention the path you want to save the result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img3 = rgb2gray(mpimg.imread('laplacian_image.png')[:,:3])\n",
+    "cv2.imshow('Laplacian', resize)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shifting (as a percentage of the picture)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shiftUp(img, percent):\n",
+    "    height, width = img.shape[:2]\n",
+    "    tx, ty = 0, -(height*percent/100)\n",
+    "    translation_matrix = np.array([[1, 0, tx],\n",
+    "                                    [0, 1, ty]\n",
+    "                                ], dtype=np.float32)\n",
+    "    translated_image = cv2.warpAffine(src=img, M=translation_matrix, dsize=(width, height))\n",
+    "    return translated_image\n",
+    "\n",
+    "def shiftDown(img, percent):\n",
+    "    height, width = img.shape[:2]\n",
+    "    tx, ty = 0, (height*percent/100)\n",
+    "    translation_matrix = np.array([[1, 0, tx],\n",
+    "                                    [0, 1, ty]\n",
+    "                                ], dtype=np.float32)\n",
+    "    translated_image = cv2.warpAffine(src=img, M=translation_matrix, dsize=(width, height))\n",
+    "    return translated_image\n",
+    "\n",
+    "def shiftLeft(img, percent):\n",
+    "    height, width = img.shape[:2]\n",
+    "    tx, ty = -(height*percent/100), -0\n",
+    "    translation_matrix = np.array([[1, 0, tx],\n",
+    "                                    [0, 1, ty]\n",
+    "                                ], dtype=np.float32)\n",
+    "    translated_image = cv2.warpAffine(src=img, M=translation_matrix, dsize=(width, height))\n",
+    "    return translated_image\n",
+    "\n",
+    "def shiftRight(img, percent):\n",
+    "    height, width = img.shape[:2]\n",
+    "    tx, ty = (height*percent/100), 0\n",
+    "    translation_matrix = np.array([[1, 0, tx],\n",
+    "                                    [0, 1, ty]\n",
+    "                                ], dtype=np.float32)\n",
+    "    translated_image = cv2.warpAffine(src=img, M=translation_matrix, dsize=(width, height))\n",
+    "    return translated_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shifted_image1 = shiftUp(img1, 7)\n",
+    "shifted_image1 = shiftDown(shifted_image1, 88)\n",
+    "shifted_image1 = shiftRight(shifted_image1, 34)\n",
+    "shifted_image1 = shiftLeft(shifted_image1, 55)\n",
+    "resize = ResizeWithAspectRatio(shifted_image1, width=700) # Resize by width OR\n",
+    "cv2.imshow('Shifted', resize)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "if save:\n",
+    "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
+    "    cv2.imwrite('shifted_image1.png', result)    # mention the path you want to save the result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shifted_image2 = shiftUp(img1, 6)\n",
+    "shifted_image2 = shiftDown(shifted_image2, 88)\n",
+    "shifted_image2 = shiftRight(shifted_image2, 5)\n",
+    "shifted_image2 = shiftLeft(shifted_image2, 45)\n",
+    "resize = ResizeWithAspectRatio(shifted_image2, width=700) # Resize by width OR\n",
+    "cv2.imshow('Shifted', resize)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "if save:\n",
+    "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
+    "    cv2.imwrite('shifted_image2.png', result)    # mention the path you want to save the result\n"
    ]
   }
  ],
