Google Cloud Vision API and Document AI added (#5)

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -327,6 +327,168 @@
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image OCR using Google Cloud Vision API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib.resources import path\n",
+    "import os, io\n",
+    "from google.cloud import vision\n",
+    "from google.cloud import vision_v1\n",
+    "from google.cloud.vision_v1 import types\n",
+    "import pandas as pd\n",
+    "\n",
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r'japaneseocr-1-8883b9dcab0a.json'\n",
+    "\n",
+    "client = vision.ImageAnnotatorClient()\n",
+    "\n",
+    "def detectText(img):\n",
+    "    with io.open(img, 'rb') as image_file:\n",
+    "        content = image_file.read()\n",
+    "\n",
+    "    image = vision_v1.types.Image(content = content)\n",
+    "    response = client.text_detection(image = image)\n",
+    "    texts = response.text_annotations\n",
+    "    print(\"Texts:\")\n",
+    "\n",
+    "    df = pd.DataFrame(columns = ['locale', 'description'])\n",
+    "    '''\n",
+    "    for text in texts:\n",
+    "        df = df._append(\n",
+    "            dict(\n",
+    "                local = text.locale,\n",
+    "                description = text.description\n",
+    "            ),\n",
+    "            ignore_index = True\n",
+    "        )\n",
+    "    return df\n",
+    "    '''\n",
+    "    for text in texts:\n",
+    "        print(f'\\n\"{text.description}\"')\n",
+    "\n",
+    "        vertices = [\n",
+    "            f\"({vertex.x},{vertex.y})\" for vertex in text.bounding_poly.vertices\n",
+    "        ]\n",
+    "\n",
+    "        print(\"bounds: {}\".format(\",\".join(vertices)))\n",
+    "\n",
+    "    if response.error.message:\n",
+    "        raise Exception(\n",
+    "            \"{}\\nFor more info on error messages, check: \"\n",
+    "            \"https://cloud.google.com/apis/design/errors\".format(response.error.message)\n",
+    "        )\n",
+    "\n",
+    "FILE_NAME = 'two_words.jpg'\n",
+    "FOLDER_PATH = r'./'\n",
+    "\n",
+    "print(detectText(FILE_NAME))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image OCR using Google Document AI API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "from google.api_core.client_options import ClientOptions\n",
+    "from google.cloud import documentai  # type: ignore\n",
+    "\n",
+    "# TODO(developer): Uncomment these variables before running the sample.\n",
+    "project_id = \"japaneseocr-1\"\n",
+    "location = \"us\" # Format is \"us\" or \"eu\"\n",
+    "processor_id = \"eaf216b404f6b455\" # Create processor before running sample\n",
+    "file_path = \"test_image1.jpg\"\n",
+    "mime_type = \"image/jpeg\" # Refer to https://cloud.google.com/document-ai/docs/file-types for supported file types\n",
+    "# field_mask = \"text,entities,pages.pageNumber\"  # Optional. The fields to return in the Document object.\n",
+    "# processor_version_id = \"YOUR_PROCESSOR_VERSION_ID\" # Optional. Processor version to use\n",
+    "\n",
+    "\n",
+    "def process_document_sample(\n",
+    "    project_id: str,\n",
+    "    location: str,\n",
+    "    processor_id: str,\n",
+    "    file_path: str,\n",
+    "    mime_type: str,\n",
+    "    field_mask: Optional[str] = None,\n",
+    "    processor_version_id: Optional[str] = None,\n",
+    ") -> None:\n",
+    "    # You must set the `api_endpoint` if you use a location other than \"us\".\n",
+    "    opts = ClientOptions(api_endpoint=f\"{location}-documentai.googleapis.com\")\n",
+    "\n",
+    "    client = documentai.DocumentProcessorServiceClient(client_options=opts)\n",
+    "\n",
+    "    if processor_version_id:\n",
+    "        # The full resource name of the processor version, e.g.:\n",
+    "        # `projects/{project_id}/locations/{location}/processors/{processor_id}/processorVersions/{processor_version_id}`\n",
+    "        name = client.processor_version_path(\n",
+    "            project_id, location, processor_id, processor_version_id\n",
+    "        )\n",
+    "    else:\n",
+    "        # The full resource name of the processor, e.g.:\n",
+    "        # `projects/{project_id}/locations/{location}/processors/{processor_id}`\n",
+    "        name = client.processor_path(project_id, location, processor_id)\n",
+    "\n",
+    "    # Read the file into memory\n",
+    "    with open(file_path, \"rb\") as image:\n",
+    "        image_content = image.read()\n",
+    "\n",
+    "    # Load binary data\n",
+    "    raw_document = documentai.RawDocument(content=image_content, mime_type=mime_type)\n",
+    "\n",
+    "    # For more information: https://cloud.google.com/document-ai/docs/reference/rest/v1/ProcessOptions\n",
+    "    # Optional: Additional configurations for processing.\n",
+    "    process_options = documentai.ProcessOptions(\n",
+    "        # Process only specific pages\n",
+    "        individual_page_selector=documentai.ProcessOptions.IndividualPageSelector(\n",
+    "            pages=[1]\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Configure the process request\n",
+    "    request = documentai.ProcessRequest(\n",
+    "        name=name,\n",
+    "        raw_document=raw_document,\n",
+    "        field_mask=field_mask,\n",
+    "        process_options=process_options,\n",
+    "    )\n",
+    "\n",
+    "    result = client.process_document(request=request)\n",
+    "\n",
+    "    # For a full list of `Document` object attributes, reference this page:\n",
+    "    # https://cloud.google.com/document-ai/docs/reference/rest/v1/Document\n",
+    "    document = result.document\n",
+    "\n",
+    "    # Read the text recognition output from the processor\n",
+    "    print(\"The document contains the following text:\")\n",
+    "    print(document.text)\n",
+    "\n",
+    "process_document_sample(\n",
+    "    project_id,\n",
+    "    location,\n",
+    "    processor_id,\n",
+    "    file_path,\n",
+    "    mime_type\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
