Modularized images and added document to json function (#6)
* Google Cloud Vision API and Document AI added

* modularized images and added document to json function

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img1 = rgb2gray(mpimg.imread('test_image.png')[:,:,:3])\n",
-    "img2 = rgb2gray(mpimg.imread('bird.png')[:,:,:3])\n",
-    "img3 = rgb2gray(mpimg.imread('two_words.jpg')[:,:,:3])"
+    "img1 = rgb2gray(mpimg.imread('images/test_image.png')[:,:,:3])\n",
+    "img2 = rgb2gray(mpimg.imread('images/bird.png')[:,:,:3])\n",
+    "img3 = rgb2gray(mpimg.imread('images/two_words.jpg')[:,:,:3])"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('original_image.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/original_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('sharpened_image.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/sharpened_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('laplacian_image.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/laplacian_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('same_image.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/same_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('unsharp_image.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/unsharp_image.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
@@ -278,7 +278,7 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('shifted_image1.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/shifted_image1.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
@@ -297,7 +297,7 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('shifted_image2.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/shifted_image2.png', result)    # mention the path you want to save the result\n"
    ]
   },
   {
@@ -388,7 +388,7 @@
     "            \"https://cloud.google.com/apis/design/errors\".format(response.error.message)\n",
     "        )\n",
     "\n",
-    "FILE_NAME = 'two_words.jpg'\n",
+    "FILE_NAME = 'images/test_image1.jpg'\n",
     "FOLDER_PATH = r'./'\n",
     "\n",
     "print(detectText(FILE_NAME))"
@@ -407,16 +407,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "from typing import Optional\n",
-    "\n",
     "from google.api_core.client_options import ClientOptions\n",
     "from google.cloud import documentai  # type: ignore\n",
+    "from google.cloud import documentai_v1\n",
     "\n",
     "# TODO(developer): Uncomment these variables before running the sample.\n",
     "project_id = \"japaneseocr-1\"\n",
     "location = \"us\" # Format is \"us\" or \"eu\"\n",
     "processor_id = \"eaf216b404f6b455\" # Create processor before running sample\n",
-    "file_path = \"test_image1.jpg\"\n",
+    "file_path = \"images/test_image1.jpg\"\n",
     "mime_type = \"image/jpeg\" # Refer to https://cloud.google.com/document-ai/docs/file-types for supported file types\n",
     "# field_mask = \"text,entities,pages.pageNumber\"  # Optional. The fields to return in the Document object.\n",
     "# processor_version_id = \"YOUR_PROCESSOR_VERSION_ID\" # Optional. Processor version to use\n",
@@ -480,6 +481,12 @@
     "    # Read the text recognition output from the processor\n",
     "    print(\"The document contains the following text:\")\n",
     "    print(document.text)\n",
+    "    \n",
+    "    # Write document to data.json\n",
+    "    json_string = documentai_v1.Document.to_json(document)\n",
+    "    dict_obj = json.loads(json_string)\n",
+    "    with open(\"data.json\", mode='w') as my_file:\n",
+    "        json.dump(dict_obj, my_file)\n",
     "\n",
     "process_document_sample(\n",
     "    project_id,\n",
