DocumentAI working and output cleaned (#7)

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -15,11 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os, io\n",
+    "import json\n",
     "import numpy as np # scientific computing\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt # plotting\n",
     "import matplotlib.image as mpimg # reading images\n",
     "from skimage.color import rgb2gray # converting rgb images to grayscale\n",
-    "import cv2"
+    "import cv2\n",
+    "\n",
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r'japaneseocr-1-8883b9dcab0a.json'"
    ]
   },
   {
@@ -332,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Image OCR using Google Cloud Vision API"
+    "### Image OCR using Google Cloud Vision API (Not being used)"
    ]
   },
   {
@@ -342,11 +347,9 @@
    "outputs": [],
    "source": [
     "from importlib.resources import path\n",
-    "import os, io\n",
     "from google.cloud import vision\n",
     "from google.cloud import vision_v1\n",
     "from google.cloud.vision_v1 import types\n",
-    "import pandas as pd\n",
     "\n",
     "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r'japaneseocr-1-8883b9dcab0a.json'\n",
     "\n",
@@ -407,7 +410,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "from typing import Optional\n",
     "from google.api_core.client_options import ClientOptions\n",
     "from google.cloud import documentai  # type: ignore\n",
@@ -419,8 +421,10 @@
     "processor_id = \"eaf216b404f6b455\" # Create processor before running sample\n",
     "file_path = \"images/test_image1.jpg\"\n",
     "mime_type = \"image/jpeg\" # Refer to https://cloud.google.com/document-ai/docs/file-types for supported file types\n",
-    "# field_mask = \"text,entities,pages.pageNumber\"  # Optional. The fields to return in the Document object.\n",
+    "field_mask = \"text,entities\"  #,pages.pageNumber\"  # Optional. The fields to return in the Document object.\n",
     "# processor_version_id = \"YOUR_PROCESSOR_VERSION_ID\" # Optional. Processor version to use\n",
+    "\n",
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r'japaneseocr-1-8883b9dcab0a.json'\n",
     "\n",
     "\n",
     "def process_document_sample(\n",
@@ -485,15 +489,27 @@
     "    # Write document to data.json\n",
     "    json_string = documentai_v1.Document.to_json(document)\n",
     "    dict_obj = json.loads(json_string)\n",
+    "\n",
+    "    filtered_data = []\n",
+    "#   filtered_data[\"text\"] = (dict_obj[\"text\"])   # Uncomment if you want the first line of the json to contain all the text\n",
+    "    for e in dict_obj[\"entities\"]:\n",
+    "        data = {\n",
+    "            \"type\": e[\"type\"],\n",
+    "            \"mentionText\": e[\"mentionText\"],\n",
+    "            \"id\": e[\"id\"],\n",
+    "        }\n",
+    "        filtered_data.append(data)\n",
+    "\n",
     "    with open(\"data.json\", mode='w') as my_file:\n",
-    "        json.dump(dict_obj, my_file)\n",
+    "        json.dump(filtered_data, my_file)\n",
     "\n",
     "process_document_sample(\n",
     "    project_id,\n",
     "    location,\n",
     "    processor_id,\n",
     "    file_path,\n",
-    "    mime_type\n",
+    "    mime_type,\n",
+    "    field_mask\n",
     ")"
    ]
   }
