--- a/testing.ipynb
+++ b/testing.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import os, io\n",
     "import json\n",
+    "from collections import deque\n",
     "import numpy as np # scientific computing\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt # plotting\n",
@@ -337,6 +338,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Function to Process Data into Anki Card Format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data comes in in json format which is obtained from running Google Document AI\n",
+    "def format_anki(data):\n",
+    "    cards = []\n",
+    "    kana, kanji, jap_sen, eng_trans, eng_ex_sen = deque(), deque(), deque(), deque(), deque()\n",
+    "    for obj in data:\n",
+    "        #Add the text and relevant metadata to respective arrays\n",
+    "        match obj[\"type\"]:\n",
+    "            case \"English\":\n",
+    "                d = {\n",
+    "                    \"text\": obj[\"mentionText\"],\n",
+    "                    \"bounding\": obj[\"pageAnchor\"][\"pageRefs\"][0][\"boundingPoly\"][\"normalizedVertices\"]\n",
+    "                }\n",
+    "                eng_trans.append(d)\n",
+    "\n",
+    "            case \"Kana\":\n",
+    "                d = {\n",
+    "                    \"text\": obj[\"mentionText\"],\n",
+    "                }\n",
+    "                kana.append(d)\n",
+    "\n",
+    "            case \"Kanji\":\n",
+    "                d = {\n",
+    "                    \"text\": obj[\"mentionText\"],\n",
+    "                    \"bounding\": obj[\"pageAnchor\"][\"pageRefs\"][0][\"boundingPoly\"][\"normalizedVertices\"]\n",
+    "                }\n",
+    "                kanji.append(d)\n",
+    "\n",
+    "            case \"Sentence_English\":\n",
+    "                d = {\n",
+    "                    \"text\": obj[\"mentionText\"],\n",
+    "                }\n",
+    "                eng_ex_sen.append(d)\n",
+    "\n",
+    "            case \"Sentence_Japanese\":\n",
+    "                d = {\n",
+    "                    \"text\": obj[\"mentionText\"],\n",
+    "                }\n",
+    "                jap_sen.append(d)\n",
+    "                \n",
+    "    # Create the fields of the anki card\n",
+    "    while kana:\n",
+    "        kanaAdd = kana.popleft()['text']\n",
+    "        if kanji[0]['bounding'][0]['y'] < eng_trans[0]['bounding'][0]['y']:\n",
+    "            kanjiAdd = kanji.popleft()['text']\n",
+    "        else:\n",
+    "            kanjiAdd = ''\n",
+    "        japAdd = jap_sen.popleft()['text']\n",
+    "        engTransAdd = eng_trans.popleft()['text']\n",
+    "        engExSenAdd = eng_ex_sen.popleft()['text']\n",
+    "\n",
+    "        card = [\n",
+    "            kanaAdd,\n",
+    "            kanjiAdd,\n",
+    "            japAdd,\n",
+    "            engTransAdd,\n",
+    "            engExSenAdd\n",
+    "        ]\n",
+    "        cards.append(card)\n",
+    "\n",
+    "    return cards\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Image OCR using Google Cloud Vision API (Not being used)"
    ]
   },
@@ -350,8 +426,6 @@
     "from google.cloud import vision\n",
     "from google.cloud import vision_v1\n",
     "from google.cloud.vision_v1 import types\n",
-    "\n",
-    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r'japaneseocr-1-8883b9dcab0a.json'\n",
     "\n",
     "client = vision.ImageAnnotatorClient()\n",
     "\n",
@@ -406,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,8 +497,7 @@
     "mime_type = \"image/jpeg\" # Refer to https://cloud.google.com/document-ai/docs/file-types for supported file types\n",
     "field_mask = \"text,entities\"  #,pages.pageNumber\"  # Optional. The fields to return in the Document object.\n",
     "# processor_version_id = \"YOUR_PROCESSOR_VERSION_ID\" # Optional. Processor version to use\n",
-    "\n",
-    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r'japaneseocr-1-8883b9dcab0a.json'\n",
+    "process_data = True\n",
     "\n",
     "\n",
     "def process_document_sample(\n",
@@ -483,25 +556,32 @@
     "    document = result.document\n",
     "\n",
     "    # Read the text recognition output from the processor\n",
-    "    print(\"The document contains the following text:\")\n",
-    "    print(document.text)\n",
+    "#    print(\"The document contains the following text:\")\n",
+    "#    print(document.text)\n",
     "    \n",
     "    # Write document to data.json\n",
     "    json_string = documentai_v1.Document.to_json(document)\n",
     "    dict_obj = json.loads(json_string)\n",
     "\n",
-    "    filtered_data = []\n",
-    "#   filtered_data[\"text\"] = (dict_obj[\"text\"])   # Uncomment if you want the first line of the json to contain all the text\n",
-    "    for e in dict_obj[\"entities\"]:\n",
-    "        data = {\n",
-    "            \"type\": e[\"type\"],\n",
-    "            \"mentionText\": e[\"mentionText\"],\n",
-    "            \"id\": e[\"id\"],\n",
-    "        }\n",
-    "        filtered_data.append(data)\n",
-    "\n",
-    "    with open(\"data.json\", mode='w') as my_file:\n",
-    "        json.dump(filtered_data, my_file)\n",
+    "    if process_data:\n",
+    "        filtered_data = []\n",
+    "    #   filtered_data[\"text\"] = (dict_obj[\"text\"])   # Uncomment if you want the first line of the json to contain all the text\n",
+    "        for e in dict_obj[\"entities\"]:\n",
+    "            data = {\n",
+    "                \"type\": e[\"type\"],\n",
+    "                \"mentionText\": e[\"mentionText\"],\n",
+    "                \"pageAnchor\": e[\"pageAnchor\"],\n",
+    "                \"id\": e[\"id\"],\n",
+    "            }\n",
+    "            filtered_data.append(data)\n",
+    "            \n",
+    "        final_data = format_anki(filtered_data)\n",
+    "            \n",
+    "        with open(\"data.json\", mode='w') as my_file:\n",
+    "            json.dump(final_data, my_file)\n",
+    "    else:\n",
+    "        with open(\"data.json\", mode='w') as my_file:\n",
+    "            json.dump(dict_obj, my_file)\n",
     "\n",
     "process_document_sample(\n",
     "    project_id,\n",
