cleanup and newline replacement (#11)

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -67,13 +67,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "resize = ResizeWithAspectRatio(img1, width=700) # Resize by width OR\n",
     "cv2.imshow('Original', resize)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('images/original_image.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/original_image.png', result)    # mention the path you want to save the result\n",
+    "'''\n"
    ]
   },
   {
@@ -83,38 +85,11 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "def plot_result(img, figsize_, method, filename, save=False):\n",
-    "    plt.figure(figsize=figsize_)\n",
-    "    plt.axis('off')\n",
-    "    plt.title(method)\n",
-    "    plt.imshow(img, cmap='gray')\n",
-    "    if save:\n",
-    "        plt.savefig(filename)\n",
-    "    plt.show()\n",
-    "\n",
-    "def plot_results(result1, result2, figsize_, method, save=False):\n",
-    "    fig, axs = plt.subplots(2, 2, figsize=figsize_)\n",
-    "    axs[0, 0].set_title('Before ' + method)\n",
-    "    axs[0, 0].axis('off')\n",
-    "    axs[0, 0].imshow(result1, cmap='gray')\n",
-    "    axs[0, 1].set_title('After ' + method)\n",
-    "    axs[0, 1].imshow(result2, cmap='gray')\n",
-    "    if save:\n",
-    "        plt.savefig(method + '_results.png')\n",
-    "    plt.show()\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "resize = ResizeWithAspectRatio(img3, width=700) # Resize by width OR\n",
     "cv2.imshow('Test', resize)\n",
     "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "'''\n"
    ]
   },
   {
@@ -158,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "sharpened_image = sharpen(img1)\n",
     "resize = ResizeWithAspectRatio(sharpened_image, width=700) # Resize by width OR\n",
     "cv2.imshow('Sharpened', resize)\n",
@@ -165,15 +141,9 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('images/sharpened_image.png', result)    # mention the path you want to save the result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    cv2.imwrite('images/sharpened_image.png', result)    # mention the path you want to save the result\n",
+    "\n",
+    "\n",
     "laplacian_image = laplacian(img1)\n",
     "resize = ResizeWithAspectRatio(laplacian_image, width=700) # Resize by width OR\n",
     "cv2.imshow('Laplacian', resize)\n",
@@ -181,15 +151,9 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('images/laplacian_image.png', result)    # mention the path you want to save the result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    cv2.imwrite('images/laplacian_image.png', result)    # mention the path you want to save the result\n",
+    "\n",
+    "\n",
     "same = same(img1)\n",
     "resize = ResizeWithAspectRatio(same, width=700) # Resize by width OR\n",
     "cv2.imshow('Same', resize)\n",
@@ -197,15 +161,9 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('images/same_image.png', result)    # mention the path you want to save the result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    cv2.imwrite('images/same_image.png', result)    # mention the path you want to save the result\n",
+    "\n",
+    "\n",
     "gaussian = cv2.GaussianBlur(img1, (0, 0), 2.0)\n",
     "unsharp_image = cv2.addWeighted(img1, 2.5, gaussian, -1.5, 0)\n",
     "\n",
@@ -215,7 +173,9 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('images/unsharp_image.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/unsharp_image.png', result)    # mention the path you want to save the result\n",
+    "'''\n",
+    "\n"
    ]
   },
   {
@@ -265,7 +225,7 @@
     "                                    [0, 1, ty]\n",
     "                                ], dtype=np.float32)\n",
     "    translated_image = cv2.warpAffine(src=img, M=translation_matrix, dsize=(width, height))\n",
-    "    return translated_image"
+    "    return translated_image\n"
    ]
   },
   {
@@ -274,6 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "shifted_image1 = shiftUp(img1, 7)\n",
     "shifted_image1 = shiftDown(shifted_image1, 88)\n",
     "shifted_image1 = shiftRight(shifted_image1, 34)\n",
@@ -284,15 +245,9 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('images/shifted_image1.png', result)    # mention the path you want to save the result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    cv2.imwrite('images/shifted_image1.png', result)    # mention the path you want to save the result\n",
+    "\n",
+    "\n",
     "shifted_image2 = shiftUp(img1, 6)\n",
     "shifted_image2 = shiftDown(shifted_image2, 88)\n",
     "shifted_image2 = shiftRight(shifted_image2, 5)\n",
@@ -303,7 +258,15 @@
     "cv2.destroyAllWindows()\n",
     "if save:\n",
     "    result = cv2.normalize(resize, dst=None, alpha=0, beta=255,norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_8U)\n",
-    "    cv2.imwrite('images/shifted_image2.png', result)    # mention the path you want to save the result\n"
+    "    cv2.imwrite('images/shifted_image2.png', result)    # mention the path you want to save the result\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cropping (as a percentage of the picture)"
    ]
   },
   {
@@ -317,8 +280,7 @@
     "    w1, w2 = width_percent\n",
     "    height, width = img.shape[:2]\n",
     "    cropped_image = img[int(height*h1/100):int(height*h2/100), int(width*w1/100):int(width*w2/100)]\n",
-    "    return cropped_image\n",
-    "    "
+    "    return cropped_image\n"
    ]
   },
   {
@@ -327,11 +289,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "cropped = crop_image(img3, (0,50), (0,35))\n",
     "resize = ResizeWithAspectRatio(cropped, width=700) # Resize by width OR\n",
     "cv2.imshow('Cropped', resize)\n",
     "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "'''\n"
    ]
   },
   {
@@ -343,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +349,7 @@
     "                    \"text\": obj[\"mentionText\"],\n",
     "                }\n",
     "                jap_sen.append(d)\n",
-    "                \n",
+    "\n",
     "    # Create the fields of the anki card\n",
     "    while kana:\n",
     "        kanaAdd = kana.popleft()['text']\n",
@@ -395,7 +359,7 @@
     "            kanjiAdd = ''\n",
     "        japAdd = jap_sen.popleft()['text']\n",
     "        engTransAdd = eng_trans.popleft()['text']\n",
-    "        engExSenAdd = eng_ex_sen.popleft()['text']\n",
+    "        engExSenAdd = eng_ex_sen.popleft()['text'].replace('\\n', ' ')\n",
     "\n",
     "        card = [\n",
     "            kanaAdd,\n",
@@ -422,6 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "from importlib.resources import path\n",
     "from google.cloud import vision\n",
     "from google.cloud import vision_v1\n",
@@ -439,17 +404,17 @@
     "    print(\"Texts:\")\n",
     "\n",
     "    df = pd.DataFrame(columns = ['locale', 'description'])\n",
-    "    '''\n",
-    "    for text in texts:\n",
-    "        df = df._append(\n",
-    "            dict(\n",
-    "                local = text.locale,\n",
-    "                description = text.description\n",
-    "            ),\n",
-    "            ignore_index = True\n",
-    "        )\n",
-    "    return df\n",
-    "    '''\n",
+    "    \n",
+    "#    for text in texts:\n",
+    "#        df = df._append(\n",
+    "#            dict(\n",
+    "#                local = text.locale,\n",
+    "#                description = text.description\n",
+    "#            ),\n",
+    "#            ignore_index = True\n",
+    "#        )\n",
+    "#    return df\n",
+    "    \n",
     "    for text in texts:\n",
     "        print(f'\\n\"{text.description}\"')\n",
     "\n",
@@ -468,7 +433,8 @@
     "FILE_NAME = 'images/test_image1.jpg'\n",
     "FOLDER_PATH = r'./'\n",
     "\n",
-    "print(detectText(FILE_NAME))"
+    "print(detectText(FILE_NAME))\n",
+    "'''\n"
    ]
   },
   {
@@ -480,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +459,7 @@
     "project_id = \"japaneseocr-1\"\n",
     "location = \"us\" # Format is \"us\" or \"eu\"\n",
     "processor_id = \"eaf216b404f6b455\" # Create processor before running sample\n",
-    "file_path = \"images/test_image1.jpg\"\n",
+    "file_path = \"images/test_image4.jpg\"\n",
     "mime_type = \"image/jpeg\" # Refer to https://cloud.google.com/document-ai/docs/file-types for supported file types\n",
     "field_mask = \"text,entities\"  #,pages.pageNumber\"  # Optional. The fields to return in the Document object.\n",
     "# processor_version_id = \"YOUR_PROCESSOR_VERSION_ID\" # Optional. Processor version to use\n",
@@ -590,7 +556,7 @@
     "    file_path,\n",
     "    mime_type,\n",
     "    field_mask\n",
-    ")"
+    ")\n"
    ]
   }
  ],
