Cleanup and folder addition (#15)

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -34,9 +34,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "img1 = rgb2gray(mpimg.imread('images/test_image.png')[:,:,:3])\n",
     "img2 = rgb2gray(mpimg.imread('images/bird.png')[:,:,:3])\n",
-    "img3 = rgb2gray(mpimg.imread('images/two_words.jpg')[:,:,:3])"
+    "img3 = rgb2gray(mpimg.imread('images/two_words.jpg')[:,:,:3])\n",
+    "'''"
    ]
   },
   {
@@ -349,6 +351,11 @@
     "                    \"text\": obj[\"mentionText\"],\n",
     "                }\n",
     "                jap_sen.append(d)\n",
+    "    print(kana)\n",
+    "    print(kanji)\n",
+    "    print(jap_sen)\n",
+    "    print(eng_trans)\n",
+    "    print(eng_ex_sen)\n",
     "\n",
     "    # Create the fields of the anki card\n",
     "    while kana:\n",
@@ -369,7 +376,7 @@
     "            engExSenAdd\n",
     "        ]\n",
     "        cards.append(card)\n",
-    "\n",
+    "    \n",
     "    return cards\n"
    ]
   },
@@ -442,121 +449,6 @@
    "metadata": {},
    "source": [
     "### Image OCR using Google Document AI API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Optional\n",
-    "from google.api_core.client_options import ClientOptions\n",
-    "from google.cloud import documentai  # type: ignore\n",
-    "from google.cloud import documentai_v1\n",
-    "\n",
-    "# TODO(developer): Uncomment these variables before running the sample.\n",
-    "project_id = \"japaneseocr-1\"\n",
-    "location = \"us\" # Format is \"us\" or \"eu\"\n",
-    "processor_id = \"eaf216b404f6b455\" # Create processor before running sample\n",
-    "file_path = \"images/test_image2.jpg\"\n",
-    "mime_type = \"image/jpeg\" # Refer to https://cloud.google.com/document-ai/docs/file-types for supported file types\n",
-    "field_mask = \"text,entities\"  #,pages.pageNumber\"  # Optional. The fields to return in the Document object.\n",
-    "# processor_version_id = \"YOUR_PROCESSOR_VERSION_ID\" # Optional. Processor version to use\n",
-    "process_data = True\n",
-    "\n",
-    "\n",
-    "def process_document_sample(\n",
-    "    project_id: str,\n",
-    "    location: str,\n",
-    "    processor_id: str,\n",
-    "    file_path: str,\n",
-    "    mime_type: str,\n",
-    "    field_mask: Optional[str] = None,\n",
-    "    processor_version_id: Optional[str] = None,\n",
-    ") -> None:\n",
-    "    # You must set the `api_endpoint` if you use a location other than \"us\".\n",
-    "    opts = ClientOptions(api_endpoint=f\"{location}-documentai.googleapis.com\")\n",
-    "\n",
-    "    client = documentai.DocumentProcessorServiceClient(client_options=opts)\n",
-    "\n",
-    "    if processor_version_id:\n",
-    "        # The full resource name of the processor version, e.g.:\n",
-    "        # `projects/{project_id}/locations/{location}/processors/{processor_id}/processorVersions/{processor_version_id}`\n",
-    "        name = client.processor_version_path(\n",
-    "            project_id, location, processor_id, processor_version_id\n",
-    "        )\n",
-    "    else:\n",
-    "        # The full resource name of the processor, e.g.:\n",
-    "        # `projects/{project_id}/locations/{location}/processors/{processor_id}`\n",
-    "        name = client.processor_path(project_id, location, processor_id)\n",
-    "\n",
-    "    # Read the file into memory\n",
-    "    with open(file_path, \"rb\") as image:\n",
-    "        image_content = image.read()\n",
-    "\n",
-    "    # Load binary data\n",
-    "    raw_document = documentai.RawDocument(content=image_content, mime_type=mime_type)\n",
-    "\n",
-    "    # For more information: https://cloud.google.com/document-ai/docs/reference/rest/v1/ProcessOptions\n",
-    "    # Optional: Additional configurations for processing.\n",
-    "    process_options = documentai.ProcessOptions(\n",
-    "        # Process only specific pages\n",
-    "        individual_page_selector=documentai.ProcessOptions.IndividualPageSelector(\n",
-    "            pages=[1]\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    # Configure the process request\n",
-    "    request = documentai.ProcessRequest(\n",
-    "        name=name,\n",
-    "        raw_document=raw_document,\n",
-    "        field_mask=field_mask,\n",
-    "        process_options=process_options,\n",
-    "    )\n",
-    "\n",
-    "    result = client.process_document(request=request)\n",
-    "\n",
-    "    # For a full list of `Document` object attributes, reference this page:\n",
-    "    # https://cloud.google.com/document-ai/docs/reference/rest/v1/Document\n",
-    "    document = result.document\n",
-    "\n",
-    "    # Read the text recognition output from the processor\n",
-    "#    print(\"The document contains the following text:\")\n",
-    "#    print(document.text)\n",
-    "    \n",
-    "    # Write document to data.json\n",
-    "    json_string = documentai_v1.Document.to_json(document)\n",
-    "    dict_obj = json.loads(json_string)\n",
-    "\n",
-    "    if process_data:\n",
-    "        filtered_data = []\n",
-    "    #   filtered_data[\"text\"] = (dict_obj[\"text\"])   # Uncomment if you want the first line of the json to contain all the text\n",
-    "        for e in dict_obj[\"entities\"]:\n",
-    "            data = {\n",
-    "                \"type\": e[\"type\"],\n",
-    "                \"mentionText\": e[\"mentionText\"],\n",
-    "                \"pageAnchor\": e[\"pageAnchor\"],\n",
-    "                \"id\": e[\"id\"],\n",
-    "            }\n",
-    "            filtered_data.append(data)\n",
-    "            \n",
-    "        final_data = format_anki(filtered_data)\n",
-    "            \n",
-    "        with open(\"data.json\", mode='w') as my_file:\n",
-    "            json.dump(final_data, my_file)\n",
-    "    else:\n",
-    "        with open(\"data.json\", mode='w') as my_file:\n",
-    "            json.dump(dict_obj, my_file)\n",
-    "\n",
-    "process_document_sample(\n",
-    "    project_id,\n",
-    "    location,\n",
-    "    processor_id,\n",
-    "    file_path,\n",
-    "    mime_type,\n",
-    "    field_mask\n",
-    ")\n"
    ]
   }
  ],
